--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "avvvatars-react": "^0.4.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
