--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.2",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +23,7 @@
     "react-router": " 6.20.1",
     "react-router-dom": "6.20.1",
     "react-scripts": "5.0.1",
-    "styled-components": "6.1.1",
+    "styled-components": "^6.1.1",
     "ts-loader": "^9.5.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
