--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 .DS_Store
 .env.local
 .env.development.local
+.env.development
 .env.test.local
 .env.production.local
 
@@ -22,6 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.env
+.env.production
 /.firebase
 /.github
