--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@
 .DS_Store
 .env.local
 .env.development.local
-.env.development
 .env.test.local
 .env.production.local
 
@@ -26,3 +25,4 @@ yarn-error.log*
 .env.production
 /.firebase
 /.github
+/.env.development
